--- a/b2devel/war/js_css/main.css
+++ b/b2devel/war/js_css/main.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+body{
+	word-wrap: break-word;
+}
+
 .r_s {
 	border: 1px solid #9999FF;
 	margin: 4px 4px 2px 2px;
@@ -10,4 +14,11 @@
 }
 .ui-collapsible-inset, .ui-collapsible-set {
     margin: 0 0.5em;
+}
+
+.ui-page-theme-a a, html .ui-bar-a a, html .ui-body-a a, html body .ui-group-theme-a a {
+    color: #000;
+    font-weight: 100;
+	text-decoration:none;
+    font: plane;
 }
